# cm2util

./: README.md  pyproject.toml
src/cm2util/: __init__.py  cm2circ.py  cm2compress.py  cm2img.py  cm2mem.py
tests/Images/: test.py
